# transformdash

./: .dockerignore  .env.docker  .env.example  .gitignore  ASSETS_USAGE.md  DASHBOARDS_CREATED.md  DEPLOYMENT.md  Doc1.docx  Dockerfile  FUTURE_ENHANCEMENTS.md  GETTING_STARTED.md  INCREMENTAL_IMPROVEMENTS.md  MANIFEST.in  MODERN_UI_IMPLEMENTATION.md  MONITORING.md  PUBLISHING.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  ROSTER_SCRAPER_README.md  SESSION_SUMMARY.md  TODO.md  UI_REFACTORING.md  auth.py  check_dependencies.py  config.py  connection_manager.py  connections.yml  datasets_api.py  demo_mvp.py  demo_real_dbt_style.py  demo_sql_transformations.py  docker-compose.yml  docker-entrypoint.sh  error_utils.py  explore_db.py  external_data_sources.py  find_data.py  hybrid_data_platform_checklist.md  hybrid_data_platform_guidance.md  (+20 more)
dbt_assistant/: README.md  WRITING_DESCRIPTIONS.md  __init__.py  core.py  embed_search.py  parser.py  requirements.txt
examples/: README.md
k8s/: ingress.yaml  secret.yaml  transformdash-deployment.yaml
marketing/: README.md  blog_post.md  linkedin_post.md  medium_post.md
migrations/: 001_create_charts_tables.sql  002_create_datasets_table.sql  002_create_schedules_table.sql  003_add_schedule_models_table.sql  004_make_model_name_nullable.sql  005_add_chart_description.sql  006_add_csv_support_to_datasets.sql  007_add_chart_size.sql  008_create_assets_table.sql  009_add_custom_dimensions.sql  010_create_users_and_permissions.sql  011_add_chart_number.sql  012_add_chart_data_source_columns.sql  012_create_demo_user.sql  013_add_must_change_password.sql
ml/: README.md
models/: dashboards.yml  exposures.yml  sources.yml
orchestration/: engine.py
other/: PIP_BUILDING.md  PUBLISHING_QUICK.md
others/: blog_post.md  medium_post.md
runs/: run_20251018_154338.json  run_20251018_155915.json  run_20251018_160042.json  run_20251018_160454.json  run_20251018_160607.json  run_20251018_162357.json  (+51 more)
ui/: app.py  (+2 more)
(+43 files in other folders)
